# PBL4_G

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  meal_plan.py  recipes.py
backend/app/core/: config.py  security.py
backend/app/crud/: meal_plan.py  recipe.py  user.py
backend/app/models/: meal_plan.py  recipe.py  user.py
backend/app/schemas/: auth.py  meal_plan.py  recipe.py  user.py
frontend/: RecipeManager.js
frontend/src/: App.jsx  RecipeManager.jsx
server/: test
